feat: :sparkles: card container and cards made

--- a/frontend/noteapp/src/styles/scss/_variables.scss
+++ b/frontend/noteapp/src/styles/scss/_variables.scss
@@ -1,6 +1,9 @@
 // Colours
 $searcher: #f1f2f5;
 $light-gray: rgb(218, 220, 224);
+$note-blue: #007bff; // "Business"
+$note-green: #28a745; // "Personal"
+$note-red: #dc3545; // "Important"
 
 // Sizes
 $tam-base: 1rem;
