feat: :sparkles: logout functionality added

--- a/frontend/noteapp/src/components/organisms/navbar/styles/css/navbar.css
+++ b/frontend/noteapp/src/components/organisms/navbar/styles/css/navbar.css
@@ -11,3 +11,11 @@ nav {
   align-items: center;
   gap: 1rem;
 }
+
+.dropdown-toggle::after {
+  display: none !important;
+}
+
+[aria-labelledby=avatar-dropdown] {
+  padding: 0px !important;
+}
